--- a/brunssum.html
+++ b/brunssum.html
@@ -14,7 +14,7 @@
 <script src="lib/slickgrid/slick.dataview.js"></script>
 <!-- End SlickGrid -->
 
-<link rel="stylesheet" type="text/css" href="../d3.parcoords.css">
+<link rel="stylesheet" type="text/css" href="d3.parcoords.css">
 <link rel="stylesheet" type="text/css" href="style.css">
 <style>
 body, html {
@@ -42,7 +42,7 @@ body, html {
 }
 </style>
 <script src="lib/d3.min.js"></script>
-<script src="../d3.parcoords.js"></script>
+<script src="d3.parcoords.js"></script>
 <script src="lib/divgrid.js"></script>
 <div id="example" class="parcoords" style="height:240px;"></div>
 <div id="grid"></div>
