--- a/brunssum.html
+++ b/brunssum.html
@@ -70,7 +70,7 @@ d3.csv('data/brunssum.csv', function(data) {
 
   parcoords
     .data(data)
-    .hideAxis(["name"])
+    .hideAxis(["Name"])
     .render()
     .reorderable()
     .brushMode("1D-axes");
