--- a/index.html
+++ b/index.html
@@ -24,23 +24,18 @@
     <section class="main-content">
 
     <!-- Main Content -->
-      <h3>
-      <a id="disclaimer" class="anchor" href="#disclaimer" aria-hidden="true"><span class="octicon octicon-link"></span></a>Disclaimer</h3>
+      <h3><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Results</h3>
+      <ul><li><a href="brunssum.html"><strong>08.11.2015: Brunssum</strong></a></li></ul>
+      <p>Right now the results from Brunssum (CC Heren/Masters) are shown.</p>
+
+      <h3><a id="disclaimer" class="anchor" href="#disclaimer" aria-hidden="true"><span class="octicon octicon-link"></span></a>Disclaimer</h3>
       <p>This is an experiment to extract and visualize publicly available race
       results of the <a href="http://limburgcross.nl" target="_blank">Jos Feron Cup 2015/2016</a>. The results (Dutch: Uitslagen) are kindly
       recorded and provided by <a href="http://www.romers.nl" target="_blank">www.romers.nl</a>.</p>
 
-      <h3>
-      <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Results</h3>
-      <p>Right now the results from Brunssum are used to get going.
 
-      <ul><li><a href="brunssum.html"><strong>08.11.2015: Brunssum</strong></a></li></ul>
-
-      </p>
-
-      <h3>
-      <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Acknowledgements</h3>
-      <p>This project is based on: A d3-based parallel coordinates plot in canvas. <a href="http://syntagmatic.github.com/parallel-coordinates" target="_blank">syntagmatic.github.com/parallel-coordinates</a></p>
+      <h3><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Acknowledgements</h3>
+      <p>This project is based on: <a href="http://syntagmatic.github.com/parallel-coordinates" target="_blank">syntagmatic.github.com/parallel-coordinates</a></p>
     <!-- End Main Content -->
 
       <footer class="site-footer">
