--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
       <ul><li><a href="brunssum.html"><strong>08.11.2015: Brunssum</strong></a></li></ul>
       <p>Right now the results from Brunssum (CC Heren/Masters) are shown.</p>
 
+      <h3><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Changelog</h3>
+      <p>
+      <ul>
+        <li>2015.11.17: Added Dames race Brunssum
+      </ul>
+      </p>
+
       <h3><a id="disclaimer" class="anchor" href="#disclaimer" aria-hidden="true"><span class="octicon octicon-link"></span></a>Disclaimer</h3>
       <p>This is an experiment to extract and visualize publicly available race
       results of the <a href="http://limburgcross.nl" target="_blank">Jos Feron Cup 2015/2016</a>. The results (Dutch: Uitslagen) are kindly
